2.6.0 () -

- TD-64   sync conflict deleted all annotations of the task
          (thanks to Markus Beppler, Konstantin Vorobyev).
- TW-61   Extract only tasks with annotations
          (thanks to Aikido Guy).
- TW-213  Align countdown column on boundary between number and text.
          (thanks to Eric Fluger).
- TW-1572 Alternative approach to urgency inheritance
          (thanks to Jens Erat, Wim Schuermann).
- TW-1667 hooks: upon failure indicate which hook failed
          (thanks to Daniel Shahaf).
- TW-1785 Purge command to remove deleted tasks
          (thanks to Paul Beckingham).
- TW-1772 Implementation of circular dependency detection is
          inefficient (thanks to Michael Meier).
- TW-1778 Unicode strings are truncated in task description
          (thanks to Andrew, bjonnh, OKOMPer, Vladimir).
- TW-1788 Closing a reopened task does not update the end time
          (thanks to Ralph Bean).
- TW-1791 taskrc(5) manpage: spurious "pri." in rule.precedence.color
          (thanks to Sebastien Badia).
- TW-1792 The info command uses '0' to reference dependencies on non-
          pending tasks.
- TW-1795 Calendar underline on Day padding
          (thanks to Renato Alves).
- TW-1805 project:ide is not allowed
          (thanks to Slaven ʙanovic).
- TW-1807 dateformat lacks a flag to display day of week
          (thanks to Ellington Santos).
- TW-1813 Range filter doesn't work
          (thanks to george js).
- TW-1820 Install with -DLANGUAGE=2 flag not work.
          (thanks to E. Manuel Cerr'on Angeles)
- TW-1823 Incorrect unicode text wrapping / justifying.
          (thanks to Sergey Trofimov).
- TW-1827 Extract annotations from a task
          (thanks to Ryan).
- TW-1855 "Well-known" CA certificates not properly auto-loaded
          (thanks to Flavio Poletti).
- TW-1857 Change Task::get call to the more efficient Task::has
          (thanks to Zachary Manning).
- TW‐1858 Change signature for dependencyGetBlocked