@@ -140,6 +140,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Lukas Barth
   Øyvind A. Holm
   Paul J. Fenwick
+  Michael Neumann
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
