@@ -2,6 +2,8 @@
 
 - TD-64   sync conflict deleted all annotations of the task
           (thanks to Markus Beppler, Konstantin Vorobyev).
+- TI-91   Timewarrior does not compile on DragonFly
+          (thanks to Michael Neumann).
 - TW-61   Extract only tasks with annotations
           (thanks to Aikido Guy).
 - TW-213  Align countdown column on boundary between number and text.
